# AutonomousOvertaking

./: .gitignore  .gitmodules  KeyboardControl.py  Manual_test.py  README.md  Run_Scenario.py  Utils.py  World_Player.py  pip_requirements.txt
MATLAB_models/: MATLAB_ROS_Manual.slx  MATLAB_ROS_Manual.slx.original  MPC_Planner_Controller.slx  MPC_Planner_Controller.slx.original  bicycle_model_test.m  constraint_obstcl_avoid.m  constraint_obstcl_avoid_alt.m  constraint_obstcl_avoid_jacobian.m  constraint_obstcl_avoid_test_jacobian.m  fit_ellipse.m  getEllipseCoeff.m  getEllipseCoeff_alt.m  higherorder_ellipse.m  init_mpc.m  init_mpc.m~  params.m  plotAll.m  plot_sim_results.m  plot_sim_results.m~  test_ROS.slx  test_constraint.m  test_deserialize.m  test_kinematic_model.slx  test_mpc.m  test_spline.m  val.m  vkinematicmodel_bicycle.m
MATLAB_models/Old/: getEllipseCoeff_alt.m  higherorder_ellipse.m  obstaclePlotInitialCondition.m  test_angle.m  test_kinematic_model.slx  test_kinematic_model.slx.original
MATLAB_models/custom_msgs/: gen_rosmsgs.m
MATLAB_models/simdata/: 2020-10-29 11:41:22_sim_out.mat  2020-10-29 11:48:50_sim_out.mat  2020-10-29 11:56:57_sim_out.mat  2020-10-29 14:16:41_sim_out.mat  2020-10-29 15:13:03_sim_out.mat  2020-10-29 15:13:44_sim_out.mat  2020-10-29 15:51:42_sim_out.mat  2020-10-29 16:17:39_sim_out.mat  2020-10-29 16:18:10_sim_out.mat  2020-10-29 16:19:59_sim_out.mat  2020-10-29 16:22:47_sim_out.mat  2020-10-29 16:32:41_sim_out.mat  2020-10-29 17:36:02_sim_out.mat  2020-10-29 17:40:17_sim_out.mat  2020-10-29 17:42:46_sim_out.mat  2020-10-29 17:45:47_sim_out.mat  2020-10-29 17:46:15_sim_out.mat  2020-10-29 17:55:00_sim_out.mat  2020-10-29 17:55:59_sim_out.mat  2020-10-29 17:57:55_sim_out.mat  2020-10-29 18:04:31_sim_out.mat  (+185 more)
ROS_less/: KeyboardControl.py
custom_msgs/: CMakeLists.txt  package.xml
ego_vehicle/: CMakeLists.txt  package.xml
ego_vehicle/config/: params.json
ego_vehicle/launch/: ego_vehicle.launch
ego_vehicle/src/: setup.py
ego_vehicle/src/ego_vehicle/: Code Profiling.txt  Utils.py  artf_pot_funcs.py  car_pot_test.py.lprof  ego_vehicle.py  kinematic_bicycle_model.py  lane_pot_test.py  overtake_algs.py  test.py  test.py.lprof  testmodel.py  utils.py  vehicle.py
ego_vehicle/src/ego_vehicle/test_scripts/: car_pot_test.py  lane_pot_test.py  test.py  test2.py
main_client/: CMakeLists.txt  package.xml  setup.py
main_client/launch/: main_client.launch
main_client/src/main_client/: client.py  keyboard_control.py  main_client.py  ui_utils.py
npc_vehicles/: CMakeLists.txt  package.xml  setup.py
ros_bridge/: CMakeLists.txt  package.xml
ros_np_multiarray/: package.xml
(+16 files in other folders)
